# habanero

./: .env.example  .mcp.json  BUGS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  ruff.toml  smithery.yaml
.github/workflows/: ci.yml  regenerate.yml  release.yml  ui-tests.yml
docs/: TROUBLESHOOTING.md
dylib/: DYLIB.md
dylib/bridge/: DialogAutoDismisser.swift  PepperAGExplorer.m  PepperConsoleInterceptor.swift  PepperDialogInterceptor.swift  PepperInlineOverlay.swift  PepperSwiftUIBodyTracker.swift  PepperVarRegistry+HeapScanner.swift
dylib/commands/handlers/: SwizzleCheckHandler.swift
dylib/config/: PepperAppConfig.swift
dylib/hooks/: PepperMethodHookEngine.m
dylib/loader/: PepperLoader.swift
dylib/server/: PepperBonjourAdvertiser.swift  PepperPlane.swift
habanero/: __init__.py  ctl.py  dylib_fetch.py  mcp_build.py  mcp_eval_compiler.py  mcp_prompts.py  mcp_scripts.py  mcp_server.py  mcp_tools_dialog.py  mcp_tools_sys_tools.py  mcp_tools_system.py  pepper_common.py  pepper_format.py  pepper_usage.py  pepper_websocket.py  test_lifecycle.py  test_runner.py
habanero/skills/babysit/: SKILL.md
habanero/skills/explore-app/: SKILL.md
pepper_ios/: mcp_prompts.py
pepper_ios/skills/babysit/: SKILL.md
scripts/: agent-runner.sh  check-tool-coverage.sh  ci.sh  embed-pepper.sh  gen-pepper-commands.py  pre-commit  real-app-smoke.sh  release.sh
scripts/hooks/: agent-guardrails.sh
test-app/PepperTestApp/: Info.plist
tools/: TOOLS.md  build-dylib.sh  build-xcframework.sh  check-sim-available.py  inject-xcode-scheme.py  mcp-registry.json  pepper-context  pepper-ctl  pepper-mcp  pepper-stream  test-client.py
tools/tests/: conftest.py  test_ci_lint_scope.py  test_dev_dependencies.py  test_eval_module_resolution.py  test_filter_raw.py  test_no_prebuilt_distribution.py  test_pepper_ax.py  test_pepper_common.py  test_pepper_format.py  test_skill_bundling.py  test_websocket.py
