[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "habanero"
version = "1.1.7"
description = "MCP server and CLI tools for Habanero (a Pepper fork) iOS simulator control"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.26.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
]

[project.scripts]
habanero-mcp = "pepper_ios.mcp_server:main"
habanero-ctl = "pepper_ios.ctl:main"
habanero-test = "pepper_ios.test_runner:main"

[tool.hatch.build.targets.wheel]
packages = ["pepper_ios"]

# NOTE (habanero fork): upstream force-includes `.claude/skills` into the
# wheel/sdist to bundle skill-prompts. That path is gitignored and absent from a
# fresh clone, so it breaks `pip install -e .` and any source build. Dropped here
# until skill bundling is made build-safe — see BUGS.md "skill-prompt bundling".
# Runtime already falls back to <repo>/.claude/skills when present, so a clean
# checkout loses nothing it had before.
