[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "habanero"
version = "1.1.7"
description = "MCP server and CLI tools for Habanero (a Pepper fork) iOS simulator control"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.26.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
]

# Toolchain for the documented quality gates (`make py-test` / `lint-py` /
# `typecheck`). Install with `pip install -e ".[dev]"`. Compatible-release pins
# (`~=`) keep the gates reproducible — notably ruff, whose minor bumps add lint
# rules that would otherwise break `make lint-py` out from under a clean checkout.
[project.optional-dependencies]
dev = [
    "pytest~=9.1.1",
    "ruff~=0.15.18",
    "pyright~=1.1.410",
]

[project.scripts]
habanero-mcp = "habanero.mcp_server:main"
habanero-ctl = "habanero.ctl:main"
habanero-test = "habanero.test_runner:main"

[tool.hatch.build.targets.wheel]
packages = ["habanero"]

# Skill-prompt sources live in the tracked tree at `habanero/skills/<name>/
# SKILL.md`, so they are bundled automatically as package data by the `packages`
# entry above and resolve at runtime via `importlib.resources` (see
# `mcp_prompts._read_skill`). No `force-include` is needed — and adding one for
# this same path collides with the default package inclusion. This replaces
# upstream's `force-include` of the gitignored `.claude/skills` path, which was
# absent from a fresh clone and broke `pip install -e .` /
# `pipx install --editable .` — see BUGS.md BUG-001.
